@@ -1,23 +1,24 @@
 package org.example.ui.service;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import io.quarkus.hibernate.orm.panache.PanacheEntityBase;
 import io.quarkus.panache.common.Parameters;
 import io.smallrye.mutiny.Multi;
 import io.smallrye.mutiny.Uni;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.IOUtils;
+import org.apache.james.mime4j.dom.SingleBody;
+import org.apache.james.mime4j.message.BodyPart;
 import org.example.ui.dto.FileCategoryInput;
 import org.example.ui.dto.FileVersionInput;
 import org.example.ui.model.FileActive;
 import org.example.ui.model.FileCategory;
 import org.example.ui.model.FileVersion;
-import org.example.ui.model.FileVersionActive;
+import org.example.ui.dto.FileVersionActive;
 import org.jboss.resteasy.plugins.providers.multipart.InputPart;
 import org.jboss.resteasy.plugins.providers.multipart.MultipartFormDataInput;
 
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
+import java.lang.reflect.Field;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.List;
@@ -54,6 +55,12 @@ public class FileService {
     private static Stream<FileVersion> getFileVersions(String name, FileCategory category) {
         return FileVersion.find("name = :name and category = :category order by version",
                 Parameters.with("name", name).and("category", category))
+                .stream();
+    }
+
+    private static Stream<FileActive> getActiveFiles(FileVersion version, FileCategory category) {
+        return FileActive.find("version.name = :version and category = :category",
+                Parameters.with("version", version.getName()).and("category", category))
                 .stream();
     }
 
@@ -100,7 +107,7 @@ public class FileService {
     }
 
     @Transactional
-    public synchronized Uni<FileVersion> persistVersion(MultipartFormDataInput input) throws JsonProcessingException {
+    public synchronized Uni<FileVersion> persistVersion(MultipartFormDataInput input) throws IOException, IllegalAccessException, NoSuchFieldException {
         Map<String, List<InputPart>> uploadForm = input.getFormDataMap();
         String obj = getStringData(getRelevantInputPart(uploadForm.get("obj")));
         FileVersionInput versionInput = mapper.readValue(obj, FileVersionInput.class);
@@ -111,6 +118,7 @@ public class FileService {
             // Do the work only, if the relevant data fields are correct
             List<InputPart> fileInputParts = uploadForm.get("file");
             InputPart fileInputPart = getRelevantInputPart(fileInputParts);
+
             byte[] data = getFileData(fileInputPart);
             assert data != null;
             String content = new String(data);
@@ -140,23 +148,23 @@ public class FileService {
                     .name(active.getName()).category(category.get()).version(active.getVersion()).build();
             Optional<FileVersion> fileVersion = FileVersion.findByIdOptional(versionId);
             if (fileVersion.isPresent()) {
-                FileActive.FileActiveId activeId = FileActive.FileActiveId.builder()
-                        .version(fileVersion.get()).category(category.get()).build();
-                Optional<FileActive> active1 = FileActive.findByIdOptional(activeId);
-                if (active1.isPresent()){
-                    active1.get().setActive(active.getVersion());
-                    active1.get().persist();
-                } else {
-                    FileActive fileActive = FileActive.builder()
-                            .active(active.getVersion()).version(fileVersion.get()).category(category.get()).build();
-                    fileActive.persist();
+                Stream<FileActive> activeStream = getActiveFiles(fileVersion.get(), category.get());
+                List<FileActive> activeList = activeStream.collect(Collectors.toList());
+                if (!activeList.isEmpty()){
+                    // delete all former active Versions
+                    log.info("Going to delete former Active Versions with category '{}' and version '{}'",
+                            category.get().getCategory(), fileVersion.get().getName());
+                    activeList.forEach(PanacheEntityBase::delete);
                 }
+                FileActive fileActive = FileActive.builder()
+                        .active(active.getVersion()).version(fileVersion.get()).category(category.get()).build();
+                fileActive.persist();
+
                 fileVersion.get().setActivated(Instant.now());
                 fileVersion.get().persist();
             }
         }
         return Uni.createFrom().voidItem();
-
     }
 
     private static Integer getNextVersion(String name, FileCategory category) {
@@ -177,7 +185,7 @@ public class FileService {
     private byte[] getFileData(InputPart inputPart) {
         try {
             InputStream inputStream = inputPart.getBody(InputStream.class, null);
-            return IOUtils.toByteArray(inputStream);
+            return inputStream.readAllBytes();
 
         } catch (IOException e) {
             e.printStackTrace();
@@ -193,4 +201,5 @@ public class FileService {
         }
         return null;
     }
+
 }
